# linguistic-analysis-app

./: .gitignore  README.md  linguistic_analysis.py  pyproject.toml
