[tool.poetry]
name = "linguistic-analysis"
version = "0.1.0"
description = ""
authors = ["Martin Schorfmann <martin+gitlab@schorfma.de>"]

[tool.poetry.dependencies]
python = "^3.8"
spacy = "^3.1.3"
en-core-web-trf = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_trf-3.1.0/en_core_web_trf-3.1.0-py3-none-any.whl"}
srsly = "^2.4.2"
streamlit = "^1.1.0"
pydantic = "^1.8.2"
stqdm = "^0.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
